fixed borders on AboutME

--- a/About_me.html
+++ b/About_me.html
@@ -14,7 +14,7 @@ EMAIL: Chhouj@uci.edu
    <!-- you would also link to Bootstrap here! -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  <title>title here</title>
+  <title>Jonathan Chhou</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -32,14 +32,20 @@ EMAIL: Chhouj@uci.edu
       </ul>
     </div>
     <div class = "content">
+      <div class = "pfp_container">
+       <img src = "Profile.png" align="left">
+      </div>
+      <div class = "Profile" >
+        <p>
+        Hello, my name is Jonathan Chhou, with nicknames as jon and jonchu. I am a 4th year informatics major with Human-computer interaction specialization under the Informatics and Computer Science Department in the University of California Irvine. Since Informatics is a broad disciple in the department that give their student access to all fields in the tech field, my path has been towards software engineering and development. This website more information about myself and you can contact me at jonathanchhou@outlook.com or chhouj@uci.edu.
+        </p>
+      </div>
       <p>
       <a href="http://validator.w3.org/check?uri=referer">
          W3C validator
       </a>
-    </p>
-    <p>
       <a href="https://nettsuka.itch.io/">
-        Game Profolio
+        <br>Game Profolio
       </a>
     </p>
     </div>
