Added games to project

--- a/About_me.html
+++ b/About_me.html
@@ -33,7 +33,7 @@ EMAIL: Chhouj@uci.edu
     </div>
     <div class = "content">
       <div class = "pfp_container">
-       <img src = "Profile.png" align="left">
+       <img src = "Profile.jpg" align="left" class="pfp">
       </div>
       <div class = "Profile" >
         <p>
