added project link

--- a/About_me.html
+++ b/About_me.html
@@ -27,7 +27,7 @@ EMAIL: Chhouj@uci.edu
         <img src= "Repa.jpg" alt = "placeholder" class="imeg">
         <li><a href="#">Home</a></li>
         <li><a href="#">Resume</a></li>
-        <li><a href="#">Projects</a></li>
+        <li><a href="Projects.html">Projects</a></li>
         <li><a href="#">Art</a></li>
       </ul>
     </div>
