Fixing html img issues

--- a/Projects.html
+++ b/Projects.html
@@ -40,22 +40,22 @@ EMAIL: Chhouj@uci.edu
             </a>
         </div>
         <div class = "game_container">
-          <img src = "https://img.itch.zone/aW1nLzI1Njg1NjYucG5n/315x250%23c/8jh9Yy.png" align="left">
+          <img src = "https://img.itch.zone/aW1nLzI1Njg1NjYucG5n/315x250%23c/8jh9Yy.png">
           <br>
           <a href = "game1.html"><p style="font-size: 20px; text-align:center" >Senpai, Please don't notice me!</p></a>
         </div>
         <div class = "game_container">
-          <img src = "https://img.itch.zone/aW1nLzI5NDY5ODYucG5n/315x250%23c/UtmhxN.png" align="left">
+          <img src = "https://img.itch.zone/aW1nLzI5NDY5ODYucG5n/315x250%23c/UtmhxN.png">
           <br>
           <a href = "#"><p style="font-size: 20px; text-align:center">Blockbooster</p></a>
         </div>
         <div class = "game_container">
-          <img src = "https://img.itch.zone/aW1nLzI4MDg3NzQucG5n/315x250%23c/Y6efrw.png" align="left">
+          <img src = "https://img.itch.zone/aW1nLzI4MDg3NzQucG5n/315x250%23c/Y6efrw.png">
           <br>
           <a href = "#"><p style="font-size: 20px; text-align:center">Elf off the shelf</p></a>
         </div>
         <div class = "game_container">
-          <img src = "https://img.itch.zone/aW1nLzI2MjMyNTcucG5n/315x250%23c/Jt0Sju.png" align="left">
+          <img src = "https://img.itch.zone/aW1nLzI2MjMyNTcucG5n/315x250%23c/Jt0Sju.png">
           <br>
           <a href = "#"><p style="font-size: 20px; text-align:center">Pumpkin Ballarina</p></a>
         </div>
