Adding Alts to imgs

--- a/Projects.html
+++ b/Projects.html
@@ -23,8 +23,8 @@ EMAIL: Chhouj@uci.edu
   <div class = "wrapper">
     
     <div class = "sidebar">
+      <img src= "Repa.jpg" alt = "placeholder" class="imeg">
       <ul class="nav_link">
-        <img src= "Repa.jpg" alt = "placeholder" class="imeg">
         <li><a href="#">Home</a></li>
         <li><a href="#">Resume</a></li>
         <li><a href="#">Projects</a></li>
@@ -40,22 +40,22 @@ EMAIL: Chhouj@uci.edu
             </a>
         </div>
         <div class = "game_container">
-          <img src = "https://img.itch.zone/aW1nLzI1Njg1NjYucG5n/315x250%23c/8jh9Yy.png">
+          <img src = "https://img.itch.zone/aW1nLzI1Njg1NjYucG5n/315x250%23c/8jh9Yy.png" alt ="Game Jam">
           <br>
           <a href = "game1.html"><p style="font-size: 20px; text-align:center" >Senpai, Please don't notice me!</p></a>
         </div>
         <div class = "game_container">
-          <img src = "https://img.itch.zone/aW1nLzI5NDY5ODYucG5n/315x250%23c/UtmhxN.png">
+          <img src = "https://img.itch.zone/aW1nLzI5NDY5ODYucG5n/315x250%23c/UtmhxN.png" alt="Game Jam">
           <br>
           <a href = "#"><p style="font-size: 20px; text-align:center">Blockbooster</p></a>
         </div>
         <div class = "game_container">
-          <img src = "https://img.itch.zone/aW1nLzI4MDg3NzQucG5n/315x250%23c/Y6efrw.png">
+          <img src = "https://img.itch.zone/aW1nLzI4MDg3NzQucG5n/315x250%23c/Y6efrw.png" alt="Game Jam">
           <br>
           <a href = "#"><p style="font-size: 20px; text-align:center">Elf off the shelf</p></a>
         </div>
         <div class = "game_container">
-          <img src = "https://img.itch.zone/aW1nLzI2MjMyNTcucG5n/315x250%23c/Jt0Sju.png">
+          <img src = "https://img.itch.zone/aW1nLzI2MjMyNTcucG5n/315x250%23c/Jt0Sju.png" alt="Game Jam">
           <br>
           <a href = "#"><p style="font-size: 20px; text-align:center">Pumpkin Ballarina</p></a>
         </div>
