--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ EMAIL: Chhouj@uci.edu
     </div>
     <div class = "content">
       <div class = "pfp_container">
-       <img src = "Profile.jpg" align="left" class="pfp">
+       <img src = "Profile.jpg" class="pfp" alt= "Profile picture">
       </div>
       <div class = "Profile" >
         <p>
