Finished Web Design

--- a/Projects.html
+++ b/Projects.html
@@ -9,11 +9,9 @@ EMAIL: Chhouj@uci.edu
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Jonathan Chhou">
-  <meta name="description" content="description of your page">
+  <meta name="description" content="Project Showcase">
    <!-- you would link to an external stylesheet here! -->
    <!-- you would also link to Bootstrap here! -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <title>Projects</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -23,41 +21,48 @@ EMAIL: Chhouj@uci.edu
   <div class = "wrapper">
     
     <div class = "sidebar">
-      <img src= "Repa.jpg" alt = "placeholder" class="imeg">
+      <img src= "Repa.jpg" alt = "placeholder" class="imeg" href="index.html">
       <ul class="nav_link">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Art</a></li>
+        <li><a href="index.html">Home</a></li>
+        <br>
+        <li><a href="Resume.html">Resume</a></li>
+        <br>
+        <li><a href="Projects.html">Projects</a></li>
       </ul>
     </div>
     <div class = "content">
       <div class = "showcase">
         <div>
-            <h1>Game Projects</h1>
+            <p id="g">Game Projects</p>
+            <p id="gc"> Website and archive uploaded on Itch:
             <a href="https://nettsuka.itch.io/">
               Game Profolio
-            </a>
+              </a></p>
+          <br>
         </div>
         <div class = "game_container">
-          <img src = "https://img.itch.zone/aW1nLzI1Njg1NjYucG5n/315x250%23c/8jh9Yy.png" alt ="Game Jam">
+          <a href = "game1.html">
+          <img src = "https://img.itch.zone/aW1nLzI1Njg1NjYucG5n/315x250%23c/8jh9Yy.png" alt ="Game Jam" class = "game_image">
           <br>
-          <a href = "game1.html"><p style="font-size: 20px; text-align:center" >Senpai, Please don't notice me!</p></a>
+          <p class = "gametitle" >Senpai, Please don't notice me!</p></a>
         </div>
         <div class = "game_container">
-          <img src = "https://img.itch.zone/aW1nLzI5NDY5ODYucG5n/315x250%23c/UtmhxN.png" alt="Game Jam">
+          <a href = "game2.html">
+          <img src = "https://img.itch.zone/aW1nLzI5NDY5ODYucG5n/315x250%23c/UtmhxN.png" alt="Game Jam" class = "game_image">
           <br>
-          <a href = "#"><p style="font-size: 20px; text-align:center">Blockbooster</p></a>
+          <p class = "gametitle">Blockbooster</p></a>
         </div>
         <div class = "game_container">
-          <img src = "https://img.itch.zone/aW1nLzI4MDg3NzQucG5n/315x250%23c/Y6efrw.png" alt="Game Jam">
+          <a href = "game3.html">
+          <img src = "https://img.itch.zone/aW1nLzI4MDg3NzQucG5n/315x250%23c/Y6efrw.png" alt="Game Jam" class = "game_image">
           <br>
-          <a href = "#"><p style="font-size: 20px; text-align:center">Elf off the shelf</p></a>
+          <p class = "gametitle">Elf off the shelf</p></a>
         </div>
         <div class = "game_container">
-          <img src = "https://img.itch.zone/aW1nLzI2MjMyNTcucG5n/315x250%23c/Jt0Sju.png" alt="Game Jam">
+          <a href = "game4.html">
+          <img src = "https://img.itch.zone/aW1nLzI2MjMyNTcucG5n/315x250%23c/Jt0Sju.png" alt="Game Jam" class = "game_image">
           <br>
-          <a href = "#"><p style="font-size: 20px; text-align:center">Pumpkin Ballarina</p></a>
+          <p class = "gametitle">Pumpkin Ballarina</p></a>
         </div>
         
       </div>
