--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@ EMAIL: Chhouj@uci.edu
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Jonathan Chhou">
-  <meta name="description" content="description of your page">
+  <meta name="description" content="An about me and home page">
    <!-- you would link to an external stylesheet here! -->
    <!-- you would also link to Bootstrap here! -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  <title>Index</title>
+  <title>Jonathan Chhou</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,31 +21,22 @@ EMAIL: Chhouj@uci.edu
   <div class = "wrapper">
     
     <div class = "sidebar">
-      <img src= "Repa.jpg" alt = "placeholder" class="imeg">
+      <img src= "Repa.jpg" alt = "placeholder" class="imeg" href="index.html">
       <ul class="nav_link">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Resume</a></li>
+        <li><a href="index.html">Home</a></li>
+        <br>
+        <li><a href="Resume.html">Resume</a></li>
+        <br>
         <li><a href="Projects.html">Projects</a></li>
-        <li><a href="#">Art</a></li>
       </ul>
     </div>
     <div class = "content">
       <div class = "pfp_container">
        <img src = "Profile.jpg" class="pfp" alt= "Profile picture">
-      </div>
-      <div class = "Profile" >
-        <p>
+        <p class="profile">
         Hello, my name is Jonathan Chhou, with nicknames as jon and jonchu. I am a 4th year informatics major with Human-computer interaction specialization under the Informatics and Computer Science Department in the University of California Irvine. Since Informatics is a broad disciple in the department that give their student access to all fields in the tech field, my path has been towards software engineering and development. This website more information about myself and you can contact me at jonathanchhou@outlook.com or chhouj@uci.edu.
         </p>
       </div>
-      <p>
-      <a href="http://validator.w3.org/check?uri=referer">
-         W3C validator
-      </a>
-      <a href="https://nettsuka.itch.io/">
-        <br>Game Profolio
-      </a>
-    </p>
     </div>
   </div>
 </body>
